test/ll_parser_oper_standard_test.test
BRACKETED EXPRESSION:
    a b c
    line ##:
a b c
^^^^^
BRACKETED EXPRESSION:
    {|a|} < {|b|} < {|c|}
    line ##:
a < b < c
^^^^^^^^^
BRACKETED EXPRESSION:
    [x (y) z {{{|u|}, {|v|}, {|w|}}} m (n (p))]
    line ##:
[ x ( y ) z {{u, v, w}} m (n (p)) ]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    ({}, {|x|}, {|y 4|}, {}, {|z|}, {}, {})
    line ##:
(, x, y 4,, z,,)
^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|y|} += {|z|}
    line ##:
y += z
^^^^^^
BRACKETED EXPRESSION:
    {|x|} = {|y|}
    line ##:
x = y
^^^^^
BRACKETED EXPRESSION:
    {|w4|} *= {|w5|}
    line ##:
w4 *= w5
^^^^^^^^
BRACKETED EXPRESSION:
    {|w3|} = {|w4|}
    line ##:
w3 = w4
^^^^^^^
BRACKETED EXPRESSION:
    {|w2|} += {|w3|}
    line ##:
w2 += w3
^^^^^^^^
BRACKETED EXPRESSION:
    {|w1|} = {|w2|}
    line ##:
w1 = w2
^^^^^^^
BRACKETED EXPRESSION:
    {|{|x1|}, {|x2|}|} += {|{|z1|}, {|z2|}|}
    line ##:
x1, x2 += z1, z2
^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} =
        {|{|y|} + {|{|z|} * {|{|w|} << {|q|}|}|} +
          {|{|u|} * {|{|v|} ** {|p|}|}|}|}
    line ##:
x = y + z * w << q + u * v ** p
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} < {|y|} < {|z|}
    line ##:
x < y < z
^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} = ({|y|} < {|z|})
    line ##:
x = ( y < z )
^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} = {|{|w|} < {|y|} < {|z|}|}
    line ##:
x = w < y < z
^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {t: no d, e, f = (m ";" n ";" p), b = (a "," b "," c)|1 2 3|t}
    line ##:
{t|1 2 3|b = (a, b, c), no d, e, f = (m; n; p): t}
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {X: Y = {* C, A, B *}|1 2 3|X}
    line ##:
{X: Y = {* A, B, C *} | 1 2 3 |}
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|a|} + {|b|} - {|c|}
    line ##:
a + b - c
^^^^^^^^^
BRACKETED EXPRESSION:
    - {|a|}
    line ##:
- a
^^^
BRACKETED EXPRESSION:
    {|+ {|a|}|} - {|b|} - {|c|}
    line ##:
+ a - b - c
^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|a|} + {|{|b|} * {|c|}|} + {|d|}
    line ##:
a + b * c + d
^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|a|} + {|{|{|b|} * {|c|}|} / {|{|d|} * {|e|}|}|} + {|f|}
    line ##:
a + b * c / d * e + f
^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|a|} + {|{|b|} * {|{|e|} ** {|d|}|} * {|{|f|} ** {|g|}|}|}
    line ##:
a + b * e ** d * f ** g
^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} + {|+ {|y|}|}
    line ##:
x + + y
^^^^^^^
BRACKETED EXPRESSION:
    {|x|} + {|+ {|y|}|}
    line ##:
x + {|+ y|}
^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} * {|* y|}
    line ##:
x * * y
^^^^^^^
BRACKETED EXPRESSION:
    {|x|} * {|* y|}
    line ##:
x * {|* y|}
^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} / {|y|}
    line ##:
x / y
^^^^^
ERROR: in line ##: extra stuff at end of expression; deleted:
x / y / z
      ^^^
BRACKETED EXPRESSION:
    {|x|} / {|y|}
    line ##:
x / y / z
^^^^^^^^^
BRACKETED EXPRESSION:
    NOT {|NOT {|x|}|}
    line ##:
NOT NOT x
^^^^^^^^^
BRACKETED EXPRESSION:
    x NOT y
    line ##:
x NOT y
^^^^^^^
ERROR: in line ##: missing operand; error operand inserted:
(NOT)
     ^
BRACKETED EXPRESSION:
    (NOT ERROR'OPERAND)
    line ##:
(NOT)
^^^^^
BRACKETED EXPRESSION:
    {|x|} AND {|y|} AND {|z|}
    line ##:
x AND y AND z
^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} AND {|NOT {|y|}|} AND {|NOT {|z|}|}
    line ##:
x AND NOT y AND NOT z
^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|{|x|} AND {|y|}|} [< BUT NOT >] {|{|z|} OR {|w|} OR {|v|}|}
    line ##:
x AND y BUT NOT z OR w OR v
^^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: in line ##: illegal operator "OR" in expression beginnning with
       "AND"; changed to "AND":
x AND y OR z
        ^^
BRACKETED EXPRESSION:
    {|x|} AND {|y|} AND {|z|}
    line ##:
x AND y OR z
^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|while {|{|x|} == {|y|}|}|}:
        {|a|} + {|b|}
    lines ##-##:
while x == y:
^^^^^^^^^^^^^
    a + b
^^^^^^^^^
BRACKETED EXPRESSION:
    {|{|x|}, {|y|}|} = {|while {|z|}|}:
        {|c|} = {|{|a|} + {|b|}|}
    lines ##-##:
x, y = while z:
^^^^^^^^^^^^^^^
    c = a + b
^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|{|while {|{|x|} == {|y|}|}|}, {|until {|{|v|} != {|w|}|}|}|}:
        {|p (q)|} = {|x [v]|}
    lines ##-##:
while x == y, until v != w:
^^^^^^^^^^^^^^^^^^^^^^^^^^^
    p(q) = x[v]
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|{|a|}, {|b|}|} =
        {|{|while {|{|x|} == {|y|}|}|}, {|until {|{|v|} != {|w|}|}|}|}:
        {|foo (b) fum (c)|} = {|{|p|}, {|q|}|}
    lines ##-##:
a, b = while x == y, until v != w:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    foo (b) fum(c) = p, q
^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|{|next x|}, {|next y|}, {|next z|}|} =:
        {|next x|} += {|1|}
        {|next y|} += {|1|}
        {|next z|} += {|1|}
    lines ##-##:
next x, next y, next z =:
^^^^^^^^^^^^^^^^^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
    next y += 1
^^^^^^^^^^^^^^^
    next z += 1
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|repeat {|5|} times|}:
        {|next x|} += {|1|}
    lines ##-##:
repeat 5 times:
^^^^^^^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|{|until {|{|z|} == {|x|}|}|}, {|[< at most >] {|10|} times|}|}:
        {|next x|} += {|1|}
    lines ##-##:
until z == x, at most 10 times:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|{|next x|}, {|y|}|} =:
        {|y|} = {|x|}
        {|next x|} += {|1|}
    lines ##-##:
next x, y =:
^^^^^^^^^^^^
    y = x
^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|{|next x|}, {|y|}|}:
        {|y|} = {|x|}
        {|next x|} += {|1|}
    lines ##-##:
next x, y:
^^^^^^^^^^
    y = x
^^^^^^^^^
    next x += 1
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    if {|{|x|} == {|y|}|} ":" {|foo ({|a|}, {|b|})|}
    line ##:
if x == y: foo ( a, b )
^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    if {|{|w|} == {|v|}|}:
        {|c|} = {|{|d|} + {|e|}|}
    lines ##-##:
if w == v:
^^^^^^^^^^
    c = d + e
^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    [< else if >] {|{|x|} != {|y|}|} ":" {|foo ({|a|}, {|b|})|}
    line ##:
else if x != y: foo ( a, b )
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    [< else if >] {|{|w|} != {|v|}|}:
        {|c|} = {|{|d|} + {|e|}|}
    lines ##-##:
else if w != v:
^^^^^^^^^^^^^^^
    c = d + e
^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    else ":" {|foo ({|a|}, {|b|})|}
    line ##:
else: foo ( a, b )
^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    else:
        {|c|} = {|{|d|} + {|e|}|}
    lines ##-##:
else:
^^^^^
    c = d + e
^^^^^^^^^^^^^
